--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
 </head>
+
 <body>
-  <script src="script.js"></script>
-  
+  <div id="header">Rock Paper Scissors game</div>
+  <div id="body">
+    <h2>Pick one:</h2>
+    <button class="gamebtn" id="Rock">Rock</button>
+    <button class="gamebtn" id="Scissors">Scissors</button>
+    <button class="gamebtn" id="Paper">Paper</button>
+    <div class="results"></div>
+  </div>
 </body>
+<script src="script.js"></script>
 </html>
