--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="header">Rock Paper Scissors game</div>
   <div id="body">
-    <h2>Pick one:</h2>
+    <h2>Choose:</h2>
     <button class="gamebtn" id="Rock">Rock</button>
     <button class="gamebtn" id="Scissors">Scissors</button>
     <button class="gamebtn" id="Paper">Paper</button>
