--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div id="header">Rock Paper Scissors game</div>
   <div id="body">
-    <h2>Choose:</h2>
+    <h2 id="h2">Choose:</h2>
     <button class="gamebtn" id="Rock">Rock</button>
     <button class="gamebtn" id="Scissors">Scissors</button>
     <button class="gamebtn" id="Paper">Paper</button>
-    <div class="results"></div>
+    <div id="results"></div>
   </div>
 </body>
 <script src="script.js"></script>
