added flex display to align buttons buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <div id="header">Rock Paper Scissors game</div>
   <div id="body">
     <h2 id="h2">Choose:</h2>
-    <button class="gamebtn" id="Rock">Rock</button>
-    <button class="gamebtn" id="Scissors">Scissors</button>
-    <button class="gamebtn" id="Paper">Paper</button>
+    <div class="buttons">
+      <button class="gamebtn" id="Rock">Rock</button>
+      <button class="gamebtn" id="Scissors">Scissors</button>
+      <button class="gamebtn" id="Paper">Paper</button>
+    </div>
     <div id="results"></div>
   </div>
 </body>
